--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ conversions/
 
 # Internal planning docs
 PROJECT_PLAN.md
+RESEARCH_DIRECTIONS.md
 
 # HuggingFace cache (user-specific)
 # ~/.cache/forge/ is outside repo, but just in case
